Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants
TODO: add debug/trace logging to some modules

	- updates uts46data.pl for unicode 6.1.0.

6.14 Tue Jan 31 20:00:24 CET 2012
	- AnyEvent::Impl::Tk was broken due to a mysterious "die" inside,
          probably an editing mistake (reported by Darin McBride).

6.13 Thu Jan 12 07:27:01 CET 2012
	- AnyEvent::Util::fork_call checked for POSIX availability in the wrong way,
          causing it to fail if POSIX wasn't loaded already (analysed by Rock Power).
	- AnyEvent::Handle::push_read (line => did pass $1 directly, so
          regex-matching inside the callback would change the parameter, despite
          $1 being dynamically scoped per-block. this perl bug is now being
          worked around (testcase by Cindy Wang).

6.12 Mon Dec 12 13:21:10 CET 2011
	- $! was clobbered by subsequent calls in tcp_connect, due to
          the postpone not saving/restoring it (analyzed by Richard Garnish).

6.11 Tue Nov 22 10:36:05 CET 2011
	- Tk cannot create windows when tainted unless you set a title, so
          set a dummy title for AnyEvent's dummy mainwindow. How dummy.
	- escape any nonprintable/nonascii characters when stringifying
          backtraces.
        - log the reason loading an interface module fails to load at level debug.

6.1  Tue Oct  4 19:44:30 CEST 2011
	- INCOMPATIBLE CHANGE: the default log level is now "4" (error
          and above), and some messages inside AnyEvent have been elevated
          to higher log levels to print by default.
        - AnyEvent::log, unlike AnyEvent::Log::log, did not always exit on fatal.
        - work around yet another signal race bug, newly introduced by POE. My
          how that module sucks.
        - add google public ipv6 dns as fallback servers, so AE::DNS can finally
          support ipv6-only operation even with defaults (also use ::1 instead
          of 127.0.0.1).
	- give better guidelines on how to chose a logging level.