@@ -3,7 +3,8 @@ Revision history for Perl extension AnyEvent.
 TODO: document TCP_*** constants
 TODO: add debug/trace logging to some modules
 
-	- updates uts46data.pl for unicode 6.1.0.
+	- documented Rocco fabricating statements about AnyEvent and me.
+	- updated uts46data.pl for unicode 6.1.0.
 
 6.14 Tue Jan 31 20:00:24 CET 2012
 	- AnyEvent::Impl::Tk was broken due to a mysterious "die" inside,
